<resources>
    <string name="app_name">S park</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="sign_up">Sign Up?</string>
    <string name="log_in">log in</string>
    <string name="welcome">Welcome</string>
    <string name="to">To</string>
    <string name="s_park">S-PARK</string>
    <string name="choose_the">Choose, The</string>
    <string name="role">Role</string>
    <string name="user_name">Name</string>
    <string name="select_role">Select Role</string>
    <string name="add_parking_slot">Add Parking Slot</string>
    <string name="parking_spot">Parking Spot</string>
    <string name="button_name">EDIT</string>
    <string name="button_email">EDIT</string>
    <string name="buttonPjone">EDIT</string>
    <string name="upload">UPLOAD</string>
    <string name="update">UPDATE</string>
    <string name="set_new_password">Set New Password</string>
    <string name="deactivate">Deactivate</string>
    <string name="password_change">Password Change</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="number_plate">Number plate</string>
    <string name="model">Model</string>
    <string name="submit">Submit</string>
    <string name="enter_email">Enter email</string>
    <string name="your_password_is_send_to_your_email_account">Your password is send to your email account.</string>
    <string name="forgot_password">Forgot password</string>
    <string name="loading">Loading</string>
    <string name="password">password</string>
    <string name="direction">Direction</string>
    <string name="booking">Booking</string>
    <string name="book">BOOK</string>
    <string name="a1">A1</string>
    <string-array name="role">
        <item>User</item>
        <item>Owner</item>
    </string-array>
</resources>
