<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityUserChangePassword">

    <EditText
        android:id="@+id/editCurrentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />

    <EditText
        android:id="@+id/editNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editConfirmNewPassword"
        app:layout_constraintEnd_toEndOf="@+id/editConfirmNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editConfirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:ems="10"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonUpdatePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNewPassword"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonUpdatePassword"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:layout_marginBottom="250dp"
        android:background="@drawable/gradient_red"
        android:text="@string/update"
        android:textAlignment="center"
        android:textColor="#b3b3b3"
        android:textSize="25sp"
        android:onClick="temp1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editConfirmNewPassword"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="278dp"
        android:layout_height="50dp"
        android:layout_marginTop="81dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/gradient_red"
        android:text="@string/password_change"
        android:textAlignment="center"
        android:textColor="#b3b3b3"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/editNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />
</androidx.constraintlayout.widget.ConstraintLayout>