<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vehicle">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="275dp"
        android:layout_height="0dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/gradient_red"
        android:text="@string/vehicle_details"
        android:textAlignment="center"
        android:textColor="#b3b3b3"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewCar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/textNumberPlate"
        android:layout_width="152dp"
        android:layout_height="0dp"
        android:layout_marginBottom="49dp"
        android:hint="@string/number_plate"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textModel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/textModel"
        android:layout_width="152dp"
        android:layout_height="0dp"
        android:layout_marginBottom="311dp"
        android:hint="@string/model"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNumberPlate"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/buttonCarDetails"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:background="@drawable/gradient_red"
        android:text="Add"
        android:textColor="#b3b3b3"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686" />

    <ImageView
        android:id="@+id/imageViewCar"
        android:layout_width="191dp"
        android:layout_height="0dp"
        android:layout_marginBottom="47dp"
        app:layout_constraintBottom_toTopOf="@+id/textNumberPlate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/car"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>